<resources>
    <string name="app_name">News Article Search</string>
    <string name="dd_mm_yyyy">dd/mm/yyyy</string>
    <string name="sort_order">Sort Order</string>
    <string name="begin_date">Begin Date</string>
    <string name="news_desk_values">News Desk Values</string>
    <string name="arts">Arts</string>
    <string name="fashion_amp_style"><![CDATA[Fashion & Style]]></string>
    <string name="sports">Sports</string>
    <string name="save">Save</string>
    <string name="search">Search</string>
</resources>
